add new project - foodfiesta

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ margin-bottom: -50px;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 20px 40px;
+  gap: 40px;
 
 
 }
